# heroes-crud-rust

./: .env  Cargo.toml  README.md
.github/: FUNDING.yml
migrations/2020-07-28-225140_heroes/: down.sql  up.sql
src/: heroes.rs  main.rs  models.rs  schema.rs
templates/: list.html.hbs  new.html.hbs  update.html.hbs
